--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <nav>
+            <div class="logo">WarehouseApp</div>
             <div class="hamburger" id="hamburger">
                 <div></div>
                 <div></div>
@@ -22,9 +23,11 @@
         </nav>
     </header>
     <main class="main">
-        <h1>Welcome to the Warehouse Management App</h1>
-        <p>This app allows you to manage warehouse inventory with a simple interface.</p>
-        <p>Use the Inventory page to add, view, update, and delete items.</p>
+        <section class="welcome-section">
+            <h1>Welcome to the Warehouse Management App</h1>
+            <p>This app allows you to manage warehouse inventory with a simple interface.</p>
+            <p>Use the Inventory page to add, view, update, and delete items.</p>
+        </section>
     </main>
     <script src="js/menu.js"></script>
 </body>
