--- a/public/edit_item.html
+++ b/public/edit_item.html
@@ -9,19 +9,20 @@
 <body>
     <header>
         <nav>
+            <div class="logo">WarehouseApp</div>
             <div class="hamburger" id="hamburger">
                 <div></div>
                 <div></div>
                 <div></div>
             </div>
             <div class="nav-links" id="navLinks">
-                <a href="/index.html">Home</a>
-                <a href="/inventory.html">Inventory</a>
-                <a href="/add_item.html">Add Item</a>
+                <a href="index.html">Home</a>
+                <a href="inventory.html">Inventory</a>
+                <a href="add_item.html">Add Item</a>
             </div>
         </nav>
     </header>
-    <main>
+    <main class="main">
         <h1>Edit Warehouse Item</h1>
         <form id="editItemForm">
             <label for="name">Name:</label>
