--- a/public/inventory.html
+++ b/public/inventory.html
@@ -9,19 +9,20 @@
 <body>
     <header>
         <nav>
+            <div class="logo">WarehouseApp</div>
             <div class="hamburger" id="hamburger">
                 <div></div>
                 <div></div>
                 <div></div>
             </div>
             <div class="nav-links" id="navLinks">
-                <a href="/index.html">Home</a>
-                <a href="/inventory.html">Inventory</a>
-                <a href="/add_item.html">Add Item</a>
+                <a href="index.html">Home</a>
+                <a href="inventory.html">Inventory</a>
+                <a href="add_item.html">Add Item</a>
             </div>
         </nav>
     </header>
-    <main>
+    <main class="main inventory-main">
         <h1>Warehouse Inventory</h1>
         <table id="itemsTable">
             <thead>
