--- a/public/inventory.html
+++ b/public/inventory.html
@@ -19,6 +19,8 @@
                 <a href="index.html">Home</a>
                 <a href="inventory.html">Inventory</a>
                 <a href="add_item.html">Add Item</a>
+                <a href="graphiccharts.html">Charts</a>
+
             </div>
         </nav>
     </header>
