--- a/public/inventory.html
+++ b/public/inventory.html
@@ -32,7 +32,7 @@
                     <th>Name</th>
                     <th>Description</th>
                     <th>Quantity</th>
-                    <th>Location</th>
+                    <th>Locations</th>
                     <th>Actions</th>
                 </tr>
             </thead>
