--- a/public/graphiccharts.html
+++ b/public/graphiccharts.html
@@ -21,6 +21,7 @@
                 <a href="inventory.html">Inventory</a>
                 <a href="add_item.html">Add Item</a>
                 <a href="graphiccharts.html">Charts</a>
+                <a href="docs.html">Documentation</a>
             </div>
         </nav>
     </header>
